UX: fix layout of group header buttons on mobile (#12781)

--- a/app/assets/stylesheets/mobile/group.scss
+++ b/app/assets/stylesheets/mobile/group.scss
@@ -43,4 +43,7 @@
 
 .group-info {
   flex-wrap: wrap;
+  .group-details-button button {
+    margin-top: 0.5em;
+  }
 }
